WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255584
ManagedMediaSource should stop tagging network operation as media if player not following buffering guidance
https://bugs.webkit.org/show_bug.cgi?id=255584
Summary
ManagedMediaSource should stop tagging network operation as media if player n...
Jean-Yves Avenard [:jya]
Reported
2023-04-18 00:40:52 PDT
The Managed Media Source object currently tags networking activity as media when the streaming attribute is true. However, if buffering is too slow, or if continuous call to appendBuffer is made, we should stop doing so so that we stop keeping the 5G modem on.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2023-04-18 00:41:05 PDT
rdar://106091782
Jean-Yves Avenard [:jya]
Comment 2
2023-04-18 00:57:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12850
EWS
Comment 3
2023-04-18 16:14:23 PDT
Committed
263105@main
(4b47aa217bc8): <
https://commits.webkit.org/263105@main
> Reviewed commits have been landed. Closing PR #12850 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug