Source/WebCore/Modules/mediasource/ManagedMediaSource.cpp
@@ -47,10 +47,14 @@ Ref<ManagedMediaSource> ManagedMediaSource::create(ScriptExecutionContext& conte
 
 ManagedMediaSource::ManagedMediaSource(ScriptExecutionContext& context)
     : MediaSource(context)
+    , m_streamingTimer(*this, &ManagedMediaSource::streamingTimerFired)
 {
 }
 
-ManagedMediaSource::~ManagedMediaSource() = default;
+ManagedMediaSource::~ManagedMediaSource()
+{
+    m_streamingTimer.stop();
+}
 
 ExceptionOr<ManagedMediaSource::PreferredQuality> ManagedMediaSource::quality() const
 {
@@ -67,10 +71,18 @@ void ManagedMediaSource::setStreaming(bool streaming)
     if (m_streaming == streaming)
         return;
     m_streaming = streaming;
-    if (streaming)
+    if (streaming) {
         scheduleEvent(eventNames().startstreamingEvent);
-    else
+        if (m_streamingAllowed) {
+            ensurePrefsRead();
+            Seconds delay { *m_highThreshold };
+            m_streamingTimer.startOneShot(delay);
+        }
+    } else {
+        if (m_streamingTimer.isActive())
+            m_streamingTimer.stop();
         scheduleEvent(eventNames().endstreamingEvent);
+    }
     notifyElementUpdateMediaState();
 }
 
@@ -108,6 +120,14 @@ bool ManagedMediaSource::isBuffered(const PlatformTimeRanges& ranges) const
     return true;
 }
 
+void ManagedMediaSource::ensurePrefsRead()
+{
+    if (m_lowThreshold && m_highThreshold)
+        return;
+    m_lowThreshold = mediaElement()->document().settings().managedMediaSourceLowThreshold();
+    m_highThreshold = mediaElement()->document().settings().managedMediaSourceHighThreshold();
+}
+
 void ManagedMediaSource::monitorSourceBuffers()
 {
     if (isClosed()) {
@@ -123,10 +143,7 @@ void ManagedMediaSource::monitorSourceBuffers()
     }
     auto currentTime = this->currentTime();
 
-    if (!m_lowThreshold || !m_highThreshold) {
-        m_lowThreshold = mediaElement()->document().settings().managedMediaSourceLowThreshold();
-        m_highThreshold = mediaElement()->document().settings().managedMediaSourceHighThreshold();
-    }
+    ensurePrefsRead();
 
     if (!m_streaming) {
         MediaTime aheadTime = std::min(duration(), currentTime + MediaTime::createWithDouble(*m_lowThreshold));
@@ -140,6 +157,12 @@ void ManagedMediaSource::monitorSourceBuffers()
     PlatformTimeRanges neededBufferedRange { currentTime, aheadTime };
     if (isBuffered(neededBufferedRange))
         setStreaming(false);
+}
+
+void ManagedMediaSource::streamingTimerFired()
+{
+    m_streamingAllowed = false;
+    notifyElementUpdateMediaState();
 }
 
 }
