Source/WebCore/Modules/mediasource/ManagedMediaSource.h
@@ -28,6 +28,7 @@
 #if ENABLE(MANAGED_MEDIA_SOURCE) && ENABLE(MEDIA_SOURCE)
 
 #include "MediaSource.h"
+#include "Timer.h"
 #include <optional>
 
 namespace WebCore {
@@ -44,6 +45,7 @@ public:
     static bool isTypeSupported(ScriptExecutionContext&, const String& type);
 
     bool streaming() const { return m_streaming; }
+    bool streamingAllowed() const { return m_streamingAllowed; }
 
     bool isManaged() const final { return true; }
 
@@ -52,9 +54,14 @@ private:
     void monitorSourceBuffers() final;
     bool isBuffered(const PlatformTimeRanges&) const;
     void setStreaming(bool);
+    void streamingTimerFired();
+    void ensurePrefsRead();
+
     bool m_streaming { false };
     std::optional<double> m_lowThreshold;
     std::optional<double> m_highThreshold;
+    Timer m_streamingTimer;
+    bool m_streamingAllowed { true };
 };
 
 } // namespace WebCore
